RESOLVED FIXED 123765
REGRESSION(r158586): plugins/refcount-leaks.html fails
https://bugs.webkit.org/show_bug.cgi?id=123765
Summary REGRESSION(r158586): plugins/refcount-leaks.html fails
Ryosuke Niwa
Reported 2013-11-04 16:36:24 PST
It appears that plugins/refcount-leaks.html started failing after this patch got landed: http://trac.webkit.org/log/?verbose=on&rev=158586&stop_rev=158585
Attachments
Patch (3.47 KB, patch)
2013-11-04 21:44 PST, Michael Saboff
fpizlo: review+
Ryosuke Niwa
Comment 2 2013-11-04 16:39:21 PST
Michael Saboff
Comment 3 2013-11-04 21:44:57 PST
Filip Pizlo
Comment 4 2013-11-04 21:50:50 PST
Comment on attachment 216002 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=216002&action=review > LayoutTests/TestExpectations:1 > -# This file contains generic test expectations that apply to all ports of WebKit. > + Did you mean to delete this line?
Michael Saboff
Comment 5 2013-11-04 21:52:55 PST
(In reply to comment #4) > (From update of attachment 216002 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=216002&action=review > > > LayoutTests/TestExpectations:1 > > -# This file contains generic test expectations that apply to all ports of WebKit. > > + > > Did you mean to delete this line? Nope. I'll put back.
Michael Saboff
Comment 6 2013-11-04 22:04:16 PST
Note You need to log in before you can comment on or make changes to this bug.