REGRESSION(r158586): plugins/refcount-leaks.html fails https://bugs.webkit.org/show_bug.cgi?id=123765

Source/JavaScriptCore:

We were leaving a hole of one slot above a new frame when pushing the new frame on
the stack with pushFrame().  This unused slot can contain residual values that will
be marked during GC.

Reviewed by Filip Pizlo.

* interpreter/JSStackInlines.h:
(JSC::JSStack::pushFrame):

LayoutTests:

Reviewed by Filip Pizlo.

Reverted the test expectation changes after fixing the underlying issue.

* TestExpectations:
* platform/wk2/TestExpectations:


Canonical link: https://commits.webkit.org/141975@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@158648 268f45cc-cd09-0410-ab3c-d52691b4dbfc